--- a/extern.css
+++ b/extern.css
@@ -108,6 +108,5 @@ textarea {
     background-size: cover;
     width: 100%;
     height: 100%;
-    filter: blur(8px);
-    -webkit-filter: blur(8px);
+    opacity: 0.5;
 }
